go through it yourself

--- a/Simple_Encoder_Decoder_LSTM-Copy1.ipynb
+++ b/Simple_Encoder_Decoder_LSTM-Copy1.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sz = 4\n",
+    "batch_sz = 100\n",
     "\n",
     "def train_agents_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
@@ -142,7 +142,7 @@
     "        \n",
     "    def forward(self, x, hidden):\n",
     "        embedded = F.relu(self.linear(x))\n",
-    "        embedded = self.drop2(embedded)\n",
+    "#         embedded = self.drop2(embedded)\n",
     "        hidden = self.lstm(embedded, hidden)\n",
     "        return hidden\n",
     "\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +237,8 @@
     "\n",
     "        # Initialize decoder hidden state as encoder hidden state\n",
     "        decoder_hidden = encoder_hidden\n",
-    "        print(\"DECODER INPUT\", decoder_input.shape)\n",
-    "        print(\"DECODER HIDDEN\", decoder_hidden[0].shape)\n",
+    "#         print(\"DECODER INPUT\", decoder_input.shape)\n",
+    "#         print(\"DECODER HIDDEN\", decoder_hidden[0].shape)\n",
     "\n",
     "        decoder_outputs = torch.zeros(target.shape).to(device)\n",
     "\n",
@@ -275,72 +275,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b9a45284a4a4adea1fadc65616daf10",
+       "model_id": "ba60851bc7bb4802a69bb42b757049f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=51486), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=2060), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ENCODER INPUT torch.Size([49, 2])\n",
-      "DECODER HIDDEN torch.Size([49, 16])\n",
-      "ENCODER INPUT torch.Size([37, 2])\n",
-      "DECODER HIDDEN torch.Size([37, 16])\n",
-      "ENCODER INPUT torch.Size([29, 2])\n",
-      "DECODER HIDDEN torch.Size([29, 16])\n",
-      "ENCODER INPUT torch.Size([36, 2])\n",
-      "DECODER HIDDEN torch.Size([36, 16])\n",
-      "ENCODER INPUT torch.Size([26, 2])\n",
-      "DECODER HIDDEN torch.Size([26, 16])\n",
-      "ENCODER INPUT torch.Size([34, 2])\n",
-      "DECODER HIDDEN torch.Size([34, 16])\n",
-      "ENCODER INPUT torch.Size([46, 2])\n",
-      "DECODER HIDDEN torch.Size([46, 16])\n",
-      "ENCODER INPUT torch.Size([42, 2])\n",
-      "DECODER HIDDEN torch.Size([42, 16])\n",
-      "ENCODER INPUT torch.Size([45, 2])\n",
-      "DECODER HIDDEN torch.Size([45, 16])\n",
-      "ENCODER INPUT torch.Size([38, 2])\n",
-      "DECODER HIDDEN torch.Size([38, 16])\n",
-      "ENCODER INPUT torch.Size([31, 2])\n",
-      "DECODER HIDDEN torch.Size([31, 16])\n",
-      "ENCODER INPUT torch.Size([34, 2])\n",
-      "DECODER HIDDEN torch.Size([34, 16])\n",
-      "ENCODER INPUT torch.Size([59, 2])\n",
-      "DECODER HIDDEN torch.Size([59, 16])\n",
-      "ENCODER INPUT torch.Size([26, 2])\n",
-      "DECODER HIDDEN torch.Size([26, 16])\n",
-      "ENCODER INPUT torch.Size([39, 2])\n",
-      "DECODER HIDDEN torch.Size([39, 16])\n",
-      "ENCODER INPUT torch.Size([51, 2])\n",
-      "DECODER HIDDEN torch.Size([51, 16])\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-3667f8849911>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epoch\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_all_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoder_optimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoder_optimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;31m#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#         predict(model, device, test_loader)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-c97b410e7075>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(encoder, decoder, device, train_loader, encoder_optimizer, decoder_optimizer, epoch, log_interval)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m                 \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx_offset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m                 \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_offset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -357,10 +307,10 @@
     "encoder_optimizer = torch.optim.Adam(encoder.parameters())\n",
     "decoder_optimizer = torch.optim.Adam(decoder.parameters())\n",
     "\n",
-    "num_epoch = 6\n",
+    "num_epoch = 1\n",
     "\n",
     "for epoch in range(1, num_epoch + 1):\n",
-    "    train(encoder, decoder, device, train_all_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
+    "    train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         predict(model, device, test_loader)"
    ]
@@ -513,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv(\"outputs6epb4all_batchnormEncoder.csv\", index=True)"
+    "df2.to_csv(\"outputs1epb100.csv\", index=True)"
    ]
   },
   {
