--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "        [3243.88574219, 1937.12597656]]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,114 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[['00000000-0000-0000-0000-000000000000'],\n",
-       "        ['00000000-0000-0000-0000-000000000000'],\n",
-       "        ['00000000-0000-0000-0000-000000000000'],\n",
-       "        ...,\n",
-       "        ['00000000-0000-0000-0000-000000000000'],\n",
-       "        ['00000000-0000-0000-0000-000000000000'],\n",
-       "        ['00000000-0000-0000-0000-000000000000']],\n",
-       "\n",
-       "       [['00000000-0000-0000-0000-000000000007'],\n",
-       "        ['00000000-0000-0000-0000-000000000007'],\n",
-       "        ['00000000-0000-0000-0000-000000000007'],\n",
-       "        ...,\n",
-       "        ['00000000-0000-0000-0000-000000000007'],\n",
-       "        ['00000000-0000-0000-0000-000000000007'],\n",
-       "        ['00000000-0000-0000-0000-000000000007']],\n",
-       "\n",
-       "       [['00000000-0000-0000-0000-000000000009'],\n",
-       "        ['00000000-0000-0000-0000-000000000009'],\n",
-       "        ['00000000-0000-0000-0000-000000000009'],\n",
-       "        ...,\n",
-       "        ['00000000-0000-0000-0000-000000000009'],\n",
-       "        ['00000000-0000-0000-0000-000000000009'],\n",
-       "        ['00000000-0000-0000-0000-000000000009']],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [['dummy51'],\n",
-       "        ['dummy51'],\n",
-       "        ['dummy51'],\n",
-       "        ...,\n",
-       "        ['dummy51'],\n",
-       "        ['dummy51'],\n",
-       "        ['dummy51']],\n",
-       "\n",
-       "       [['dummy52'],\n",
-       "        ['dummy52'],\n",
-       "        ['dummy52'],\n",
-       "        ...,\n",
-       "        ['dummy52'],\n",
-       "        ['dummy52'],\n",
-       "        ['dummy52']],\n",
-       "\n",
-       "       [['dummy53'],\n",
-       "        ['dummy53'],\n",
-       "        ['dummy53'],\n",
-       "        ...,\n",
-       "        ['dummy53'],\n",
-       "        ['dummy53'],\n",
-       "        ['dummy53']]], dtype=object)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch[0]['track_id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.]])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p = numpy.array(numpy.zeros((seq_len,batch_size)))\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +179,7 @@
     "    out_seq_len = batch[0]['p_out'][0].shape[0]\n",
     "    feat_len = 2\n",
     "    inp = numpy.array(numpy.zeros((inp_seq_len,batch_size, feat_len)))\n",
-    "    out\n",
+    "    out = numpy.array(numpy.zeros((out_seq_len,batch_size, feat_len)))\n",
     "    for i,scene in enumerate(batch):\n",
     "        for j in range(inp_seq_len):\n",
     "            inp[j,i,:] = scene['p_in'][scene['track_id'][:,0,0]==scene['agent_id'],j]\n",
@@ -320,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +259,7 @@
     "#         out = out[:,0,:,:]\n",
     "        \n",
     "        #inp - inp[0] for all in whaetver\n",
+    "        print(inp)\n",
     "        x_offset = []\n",
     "        y_offset = []\n",
     "        for i in range(inp.shape[0]):\n",
@@ -419,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bb89bc0d59b4e68813d56d74cab46ee",
+       "model_id": "13f8c63376124f8a9cdf58b33adf35d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,17 +331,115 @@
      "output_type": "display_data"
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "the batch number of src and tgt must be equal",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[2522.5842, 1137.3689],\n",
+      "         [ 531.8541, 3401.1375],\n",
+      "         [2958.2458, 1415.4800],\n",
+      "         [3190.9292, 1635.0044]],\n",
+      "\n",
+      "        [[2522.1729, 1136.9664],\n",
+      "         [ 531.7365, 3401.6626],\n",
+      "         [2958.6125, 1415.9343],\n",
+      "         [3191.8801, 1635.9207]],\n",
+      "\n",
+      "        [[2521.6685, 1136.5115],\n",
+      "         [ 531.7441, 3402.6079],\n",
+      "         [2959.0913, 1416.3925],\n",
+      "         [3192.6768, 1636.6622]],\n",
+      "\n",
+      "        [[2521.2451, 1136.0835],\n",
+      "         [ 531.6589, 3403.3660],\n",
+      "         [2959.5767, 1416.8828],\n",
+      "         [3193.5417, 1637.3927]],\n",
+      "\n",
+      "        [[2520.7495, 1135.6464],\n",
+      "         [ 531.7817, 3404.2925],\n",
+      "         [2960.1143, 1417.2993],\n",
+      "         [3194.3892, 1638.1687]],\n",
+      "\n",
+      "        [[2520.2810, 1135.1990],\n",
+      "         [ 531.6119, 3405.1038],\n",
+      "         [2960.3005, 1417.6888],\n",
+      "         [3195.2163, 1638.9204]],\n",
+      "\n",
+      "        [[2519.7988, 1134.6572],\n",
+      "         [ 531.5894, 3406.0005],\n",
+      "         [2960.8850, 1418.2285],\n",
+      "         [3195.9160, 1639.5873]],\n",
+      "\n",
+      "        [[2519.3862, 1134.3904],\n",
+      "         [ 531.6403, 3406.9773],\n",
+      "         [2960.2373, 1417.9746],\n",
+      "         [3196.8159, 1640.4072]],\n",
+      "\n",
+      "        [[2519.0645, 1134.0527],\n",
+      "         [ 531.5314, 3407.7742],\n",
+      "         [2960.8682, 1418.4949],\n",
+      "         [3197.6582, 1641.1968]],\n",
+      "\n",
+      "        [[2518.5100, 1133.4539],\n",
+      "         [ 531.4633, 3408.6724],\n",
+      "         [2961.4109, 1418.9884],\n",
+      "         [3198.5381, 1642.0093]],\n",
+      "\n",
+      "        [[2518.1665, 1133.0082],\n",
+      "         [ 531.4413, 3409.5974],\n",
+      "         [2961.8894, 1419.4590],\n",
+      "         [3199.5242, 1642.9197]],\n",
+      "\n",
+      "        [[2517.6423, 1132.6089],\n",
+      "         [ 531.5934, 3410.5864],\n",
+      "         [2962.4375, 1419.9430],\n",
+      "         [3200.4275, 1643.7858]],\n",
+      "\n",
+      "        [[2517.2163, 1132.2510],\n",
+      "         [ 531.5353, 3411.6150],\n",
+      "         [2963.0461, 1420.5259],\n",
+      "         [3201.1462, 1644.5173]],\n",
+      "\n",
+      "        [[2516.8037, 1131.8314],\n",
+      "         [ 531.5518, 3412.3909],\n",
+      "         [2963.4485, 1420.8801],\n",
+      "         [3202.1121, 1645.4938]],\n",
+      "\n",
+      "        [[2516.4023, 1131.4608],\n",
+      "         [ 531.4308, 3413.4890],\n",
+      "         [2964.0120, 1421.4283],\n",
+      "         [3202.8396, 1646.0626]],\n",
+      "\n",
+      "        [[2515.9822, 1131.0383],\n",
+      "         [ 531.4476, 3414.4700],\n",
+      "         [2964.3989, 1421.7225],\n",
+      "         [3203.7024, 1646.8944]],\n",
+      "\n",
+      "        [[2515.6375, 1130.4941],\n",
+      "         [ 531.4414, 3415.6035],\n",
+      "         [2963.7720, 1421.1440],\n",
+      "         [3204.6770, 1647.7391]],\n",
+      "\n",
+      "        [[2515.2603, 1130.1246],\n",
+      "         [ 531.5308, 3416.5322],\n",
+      "         [2963.8022, 1421.1385],\n",
+      "         [3205.4448, 1648.4399]],\n",
+      "\n",
+      "        [[2514.8589, 1129.7882],\n",
+      "         [ 531.4788, 3417.0967],\n",
+      "         [2963.8149, 1420.8492],\n",
+      "         [3206.3350, 1649.2280]]])\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-c24561cfeb46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epoch\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_agent_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;31m#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#         predict(model, device, test_loader)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-9169d4fff2e9>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, device, train_loader, optimizer, epoch, log_interval)\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/nn/modules/transformer.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, src, tgt, src_mask, tgt_mask, memory_mask, src_key_padding_mask, tgt_key_padding_mask, memory_key_padding_mask)\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mtgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the batch number of src and tgt must be equal\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_model\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: the batch number of src and tgt must be equal"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-c24561cfeb46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epoch\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_agent_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;31m#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#         predict(model, device, test_loader)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-0b62c1546e76>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, device, train_loader, optimizer, epoch, log_interval)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m                 \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx_offset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m                 \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_offset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
