--- a/Simple_Encoder_Decoder_LSTM+velocity2.ipynb
+++ b/Simple_Encoder_Decoder_LSTM+velocity2.ipynb
@@ -80,27 +80,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sz = 100\n",
+    "batch_sz = 4\n",
     "\n",
     "def train_agents_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
-    "    out = numpy.concatenate([numpy.dstack([scene['p_out'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
+    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:],scene['v_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
+    "    out = numpy.concatenate([numpy.dstack([scene['p_out'][scene['track_id'][:,0,0]==scene['agent_id'],:,:],scene['v_out'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
     "    inp = torch.Tensor(inp)\n",
     "    out = torch.Tensor(out)\n",
     "    return [inp, out]\n",
     "\n",
     "def train_all_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:]]) for scene in batch])\n",
-    "    out = numpy.concatenate([numpy.dstack([scene['p_out'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:]]) for scene in batch])\n",
+    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:],scene['v_in'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:]]) for scene in batch])     \n",
+    "    out = numpy.concatenate([numpy.dstack([scene['p_out'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:],scene['v_out'][['dummy' not in word for word in scene['track_id'][:,0,0]],:,:]]) for scene in batch])\n",
     "    inp = torch.Tensor(inp)\n",
     "    out = torch.Tensor(out)\n",
     "    return [inp, out]\n",
     "    \n",
     "def test_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
+    "    inp = numpy.concatenate([numpy.dstack([scene['p_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:],scene['v_in'][scene['track_id'][:,0,0]==scene['agent_id'],:,:]]) for scene in batch])\n",
     "    inp = torch.Tensor(inp)\n",
     "    idx = [numpy.dstack([scene['scene_idx']]) for scene in batch]\n",
     "    return inp, idx\n",
@@ -126,23 +126,18 @@
     "    \"\"\"referenced from official Argoverse forecasting code: https://github.com/jagjeet-singh/argoverse-forecasting\"\"\"\n",
     "    \n",
     "    def __init__(self,\n",
-    "                 input_size = 2,\n",
-    "                 embedding_size = 8,\n",
-    "                 hidden_size = 16):\n",
+    "                 input_size = 4,\n",
+    "                 embedding_size = 16,\n",
+    "                 hidden_size = 1024):\n",
     "        \n",
     "        super(EncoderRNN, self).__init__()\n",
-    "        \n",
-    "        dropnum = 0.35\n",
     "        \n",
     "        self.hidden_size = hidden_size\n",
     "        self.linear = nn.Linear(input_size, embedding_size)\n",
     "        self.lstm = nn.LSTMCell(embedding_size, hidden_size)\n",
-    "        self.drop1 = nn.Dropout(dropnum)\n",
-    "        self.drop2 = nn.BatchNorm1d(embedding_size)\n",
-    "        \n",
+    "\n",
     "    def forward(self, x, hidden):\n",
     "        embedded = F.relu(self.linear(x))\n",
-    "#         embedded = self.drop2(embedded)\n",
     "        hidden = self.lstm(embedded, hidden)\n",
     "        return hidden\n",
     "\n",
@@ -150,7 +145,7 @@
     "class DecoderRNN(nn.Module):\n",
     "    \"\"\"Decoder Network.\"\"\"\n",
     "    \"\"\"referenced from official Argoverse forecasting code: https://github.com/jagjeet-singh/argoverse-forecasting\"\"\"\n",
-    "    def __init__(self, embedding_size=8, hidden_size=16, output_size=2):\n",
+    "    def __init__(self, embedding_size=16, hidden_size=1024, output_size=4):\n",
     "        super(DecoderRNN, self).__init__()\n",
     "        self.hidden_size = hidden_size\n",
     "\n",
@@ -159,7 +154,8 @@
     "        self.linear2 = nn.Linear(hidden_size, output_size)\n",
     "\n",
     "    def forward(self, x, hidden):\n",
-    "        embedded = F.relu(self.linear1(x))\n",
+    "        x = self.linear1(x)\n",
+    "        embedded = F.relu(x)\n",
     "        hidden = self.lstm(embedded, hidden)\n",
     "        output = self.linear2(hidden[0])\n",
     "        return output, hidden\n"
@@ -180,7 +176,7 @@
     "    counter = 0\n",
     "    criterion = nn.MSELoss()\n",
     "    \n",
-    "    for i_batch, sample_batch in enumerate(train_loader):\n",
+    "    for i_batch, sample_batch in enumerate(iterator):\n",
     "        \n",
     "        inp, out = sample_batch\n",
     "#         print(inp.shape)\n",
@@ -200,7 +196,7 @@
     "                inp[j][i][0] = inp[j][i][0] - x_offset[j]\n",
     "                inp[j][i][1] = inp[j][i][1] - y_offset[j]\n",
     "\n",
-    "        #outoput whatever\n",
+    "        #output whatever\n",
     "        for j in range(out.shape[0]):\n",
     "            for i in range(out.shape[1]):\n",
     "                out[j][i][0] = out[j][i][0] - x_offset[j]\n",
@@ -233,13 +229,12 @@
     "            encoder_hidden = encoder(encoder_input, encoder_hidden)\n",
     "\n",
     "        # Initialize decoder input with last coordinate in encoder\n",
-    "        decoder_input = encoder_input[:, :2]\n",
-    "\n",
+    "        decoder_input = encoder_input[:, :]\n",
+    "        \n",
     "        # Initialize decoder hidden state as encoder hidden state\n",
     "        decoder_hidden = encoder_hidden\n",
     "#         print(\"DECODER INPUT\", decoder_input.shape)\n",
     "#         print(\"DECODER HIDDEN\", decoder_hidden[0].shape)\n",
-    "\n",
     "        decoder_outputs = torch.zeros(target.shape).to(device)\n",
     "\n",
     "        # Decode hidden state in future trajectory\n",
@@ -249,7 +244,7 @@
     "            decoder_outputs[:, di, :] = decoder_output\n",
     "\n",
     "            # Update loss\n",
-    "            loss += torch.sqrt(criterion(decoder_output[:, :2], target[:, di, :2]))\n",
+    "            loss += torch.sqrt(criterion(decoder_output[:, :4], target[:, di, :4]))\n",
     "\n",
     "            # Use own predictions as inputs at next step\n",
     "            decoder_input = decoder_output\n",
@@ -269,6 +264,8 @@
     "#       output = model(data)\n",
     "#         loss = MSELoss(output, target)\n",
     "        counter += 1\n",
+    "        if counter % (0.1*len(train_loader)) == 0:\n",
+    "            print(\"10% passed\")\n",
     "        iterator.set_postfix(loss=(loss.item()))\n",
     "    "
    ]
@@ -281,12 +278,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba60851bc7bb4802a69bb42b757049f2",
+       "model_id": "9db730854a0340479ae54476db631619",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=2060), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=51486), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -295,8 +292,8 @@
    ],
    "source": [
     "device = \"cuda\"\n",
-    "encoder = EncoderRNN(input_size=2)\n",
-    "decoder = DecoderRNN(output_size=2)\n",
+    "encoder = EncoderRNN(input_size=4)\n",
+    "decoder = DecoderRNN(output_size=4)\n",
     "\n",
     "encoder = nn.DataParallel(encoder)\n",
     "decoder = nn.DataParallel(decoder)\n",
@@ -307,10 +304,10 @@
     "encoder_optimizer = torch.optim.Adam(encoder.parameters())\n",
     "decoder_optimizer = torch.optim.Adam(decoder.parameters())\n",
     "\n",
-    "num_epoch = 1\n",
+    "num_epoch = 2\n",
     "\n",
     "for epoch in range(1, num_epoch + 1):\n",
-    "    train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
+    "    train(encoder, decoder, device, train_all_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         predict(model, device, test_loader)"
    ]
@@ -382,13 +379,13 @@
     "            encoder_hidden = encoder(encoder_input, encoder_hidden)\n",
     "\n",
     "        # Initialize decoder input with last coordinate in encoder\n",
-    "        decoder_input = encoder_input[:, :2]\n",
+    "        decoder_input = encoder_input[:, :4]\n",
     "\n",
     "        # Initialize decoder hidden state as encoder hidden state\n",
     "        decoder_hidden = encoder_hidden\n",
     "\n",
     "        decoder_outputs = torch.zeros(\n",
-    "            (batch_size, 30, 2)).to(device)\n",
+    "            (batch_size, 30, 4)).to(device)\n",
     "\n",
     "        # Decode hidden state in future trajectory\n",
     "        for di in range(30):\n",
@@ -441,7 +438,7 @@
    "outputs": [],
    "source": [
     "for i in range(30):\n",
-    "    df[['v{}'.format((i*2)+1), 'v{}'.format((i*2)+2)]] = pd.DataFrame(df.get(i).tolist(), index=df.index)"
+    "    df[['v{}'.format((i*2)+1), 'v{}'.format((i*2)+2)]] = pd.DataFrame(df.get(i).tolist(), index=df.index)[[0, 1]]"
    ]
   },
   {
@@ -463,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv(\"outputs1epb100.csv\", index=True)"
+    "df2.to_csv(\"outputs2epb4_v_all_decoderhidden1024.csv\", index=True)"
    ]
   },
   {
